crates/data-dict/tests/snapshots/validate_data__a_column_level_assertion_points_at_its_column.snap
---
source: crates/data-dict/tests/validate_data.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    source:
      parquet: data.parquet
    columns:
      - name: a
        type: number(quantity)
        range: [-100, 100]
        constraints:
          - assert: a >= 0
────────────────────────────────────────
error[D07]: An assertion must hold for every row.
  --> dict.yaml:12:21
   |
LL |   - name: t
...
LL |       - name: a
...
LL |           - assert: a >= 0
   |                     ^^^^^^ is false for 1 row: 2 (a=-5)
