crates/data-dict/tests/snapshots/validate_data__a_non_finite_value_in_the_data_is_a_value.snap
---
source: crates/data-dict/tests/validate_data.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    source:
      parquet: data.parquet
    constraints:
      - assert: IS_FINITE(x)
    columns:
      - name: x
        type: number
        examples: [1.5, 2.5, 3.5]
────────────────────────────────────────
error[D07]: An assertion must hold for every row.
  --> dict.yaml:8:17
   |
LL |   - name: t
...
LL |       - assert: IS_FINITE(x)
   |                 ^^^^^^^^^^^^ is false for 3 rows: 2, 3, 4 (x=NaN)
