crates/data-dict/tests/snapshots/validate_data__a_pattern_read_from_the_data_that_is_not_a_regex_is_reported.snap
---
source: crates/data-dict/tests/validate_data.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    source:
      parquet: data.parquet
    constraints:
      - assert: s SIMILAR TO p
    columns:
      - name: s
        type: string
        examples: [NZ-1234]
      - name: p
        type: string
        examples: ['NZ-.*']
────────────────────────────────────────
error[D08]: An assertion must be evaluable against the data.
  --> dict.yaml:8:17
   |
LL |   - name: t
...
LL |       - assert: s SIMILAR TO p
   |                 ^^^^^^^^^^^^^^ `*(` at row 2 is not a valid regular expression
   |
   = help: Correct the data the pattern comes from, or write the pattern as a literal so it is checked when the dictionary is validated.
