crates/data-dict/tests/snapshots/validate_data__a_remainder_never_follows_the_dividend.snap
---
source: crates/data-dict/tests/validate_data.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    source:
      parquet: data.parquet
    constraints:
      - assert: MOD(a, 3) <= 0
    columns:
      - name: a
        type: number(quantity)
        range: [-1000000, 1000000]
      - name: b
        type: number(quantity)
        range: [-1000000, 1000000]
────────────────────────────────────────
error[D07]: An assertion must hold for every row.
  --> dict.yaml:8:17
   |
LL |   - name: t
...
LL |       - assert: MOD(a, 3) <= 0
   |                 ^^^^^^^^^^^^^^ is false for 1 row: 1 (a=-7)
