crates/data-dict/tests/snapshots/validate_data__assertion_referencing_a_definition_is_evaluated.snap
---
source: crates/data-dict/tests/validate_data.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    source:
      parquet: data.parquet
    constraints:
      - assert: doubled > 0
    definitions:
      - name: doubled
        expr: a * 2
    columns:
      - name: a
        type: number(quantity)
        range: [-1000000, 1000000]
      - name: b
        type: number(quantity)
        range: [-1000000, 1000000]
────────────────────────────────────────
error[D07]: An assertion must hold for every row.
  --> dict.yaml:8:17
   |
LL |   - name: t
...
LL |       - assert: doubled > 0
   |                 ^^^^^^^^^^^ is false for 1 row: 2 (a=-2)
