crates/data-dict/tests/snapshots/validate_data__assertion_referencing_a_nested_definition_is_evaluated.snap
---
source: crates/data-dict/tests/validate_data.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    source:
      parquet: data.parquet
    constraints:
      - assert: not_neg
    definitions:
      - name: neg
        expr: a < 0
      - name: not_neg
        expr: NOT(neg)
    columns:
      - name: a
        type: number(quantity)
        range: [-1000000, 1000000]
      - name: b
        type: number(quantity)
        range: [-1000000, 1000000]
────────────────────────────────────────
error[D07]: An assertion must hold for every row.
  --> dict.yaml:8:17
   |
LL |   - name: t
...
LL |       - assert: not_neg
   |                 ^^^^^^^ is false for 1 row: 2 (a=-2)
